# ruby-fast-cop

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COPS.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/skills/cop-review/: SKILL.md
.claude/skills/cop-verifier/: SKILL.md
.claude/skills/rubocop-test-importer/: SKILL.md
.claude/skills/ruby-prism-api/: SKILL.md
src/: config.rs  correction.rs  lib.rs  main.rs  offense.rs
src/cops/: mod.rs  registry.rs
src/cops/bundler/: duplicated_gem.rs  duplicated_group.rs  gem_filename.rs  insecure_protocol_source.rs  mod.rs  ordered_gems.rs
src/cops/gemspec/: add_runtime_dependency.rs  attribute_assignment.rs  deprecated_attribute_assignment.rs  development_dependencies.rs  duplicated_assignment.rs  mod.rs  ordered_dependencies.rs  require_mfa.rs  required_ruby_version.rs  ruby_version_globals_usage.rs
src/cops/layout/: access_modifier_indentation.rs  argument_alignment.rs  array_alignment.rs  assignment_indentation.rs  begin_end_alignment.rs  block_alignment.rs  block_end_newline.rs  (+75 more)
src/helpers/: abc_size.rs  access_modifier.rs  alignment_check.rs  allowed_methods.rs  code_length.rs  empty_lines_around_body.rs  escape.rs  guard_clause.rs  hash_transform_method.rs  interpolation.rs  method_complexity.rs  mod.rs  multiline_element_indentation.rs  multiline_literal_brace_layout.rs  negative_conditional.rs  node_match.rs  percent_literal.rs  preceding_following_alignment.rs  source.rs  surrounding_space.rs  trailing_comma.rs  uncommunicative_name.rs  variable_force.rs
tests/: ast_cli.rs  tester.rs
(+1710 files in other folders)
