[package]
name = "ruby-fast-cop"
version = "0.1.0"
edition = "2024"
description = "A high-performance Ruby linter written in Rust"
license = "MIT"
repository = "https://github.com/example/ruby-fast-cop"

[lib]
name = "ruby_fast_cop"
path = "src/lib.rs"

[[bin]]
name = "ruby-fast-cop"
path = "src/main.rs"

[[bin]]
name = "fixture_stats"
path = "src/bin/fixture_stats.rs"

[[bin]]
name = "ast"
path = "src/bin/ast.rs"

[dependencies]
glob = "0.3"
globset = "0.4"
inventory = "0.3"
regex = "1"
ruby-prism = "1.9.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
